--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+.page {
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -6,7 +6,7 @@
   min-height: 100vh;
 }
 
-.content {
+main {
   flex: 1 1 auto;
   margin: 1em 0;
   width: 100%;
