--- a/src/containers/Home/Home.scss
+++ b/src/containers/Home/Home.scss
@@ -2,8 +2,10 @@
   height: 100%;
   display: flex;
   justify-content: center;
-  align-items: center; }
+  align-items: center;
+}
 
 #home h2 {
   font-size: 28px;
-  text-align: center; }
+  text-align: center;
+}
