--- a/src/containers/Results/Results.scss
+++ b/src/containers/Results/Results.scss
@@ -2,10 +2,13 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  min-height: 100vh; }
+  min-height: 100vh;
+}
 
 #results main {
-  flex: 1 1 auto; }
+  flex: 1 1 auto;
+}
 
 #results h2 {
-  margin-top: 30px; }
+  margin-top: 30px;
+}
