--- a/src/index.scss
+++ b/src/index.scss
@@ -17,9 +17,46 @@ $flags-image-path: '../node_modules/semantic-ui-sass/images';
 @import 'styles/typography/typography-declarations';
 
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+  background-color: $color-bg-lightest;
+  font-size: 1.6rem;
+  font-family: $font-family-serif;
+  line-height: $type-line-height-default;
+  color: $color-typo-darkest;
+}
+
+html {
+  font-size: 62.5%;
+}
+
+h1 {
+  @extend %heading-large-serif-bold;
+}
+
+h2 {
+  @extend %heading-large-sans-normal;
+}
+
+h3 {
+  @extend %heading-regular-sans-normal;
+}
+
+h4 {
+  @extend %heading-regular-serif-bold;
+}
+
+h5 {
+  @extend %heading-small-serif-bold;
+}
+
+h6 {
+  @extend %heading-small-sans-bold;
+}
+
+p,
+ol,
+ul,
+li {
+  @extend %body-regular-normal;
 }
 
 #root {
