--- a/src/index.scss
+++ b/src/index.scss
@@ -3,6 +3,8 @@ $flags-image-path: '../node_modules/semantic-ui-sass/images';
 @import '../node_modules/semantic-ui-sass/semantic-ui';
 
 @import 'global-styles/grid/variables';
+
+@import 'global-styles/responsive/utilities';
 @import 'global-styles/responsive/variables';
 
 @import 'global-styles/colors/variables';
