--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -1,9 +1,19 @@
+/* stylelint-disable */
 .ui.card {
+  &.green {
+    border-top: 4px solid #3FAD93;
+    box-shadow: none;
+    //box-shadow: 0 0 0 10px #d4d4d5, 0 2px 0 0 #21ba45, 0 1px 3px 0 #d4d4d5;
+  }
+
   .practiceAreas {
     display: inline-block;
+    color: darkgray;
   }
 
   .matchPercentage {
     display: inline-block;
+    color: #3FAD93;
+    float: right;
   }
 }
