--- a/src/components/BcgHeader/BcgHeader.scss
+++ b/src/components/BcgHeader/BcgHeader.scss
@@ -1,6 +1,6 @@
 //My overrides, need to put somewhere more global
 .ui.menu {
-  border: none;
+  border: 0;
   box-shadow: none;
 }
 
@@ -19,7 +19,7 @@
     background-color: #00532f;
     font-family: HendersonBCGSans-Bold, Arial, Helvetica, sans-serif;
     font-size: 28px;
-    color: #fff;
+    color: #ffffff;
     letter-spacing: 0;
     text-align: center;
     line-height: 35px;
