--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,17 +1,7 @@
-@import 'src/global-styles/responsive/utilities';
-@import 'src/global-styles/responsive/variables';
+@import 'src/global-styles/colors';
+@import 'src/global-styles/responsive';
 
-@import 'src/global-styles/colors/variables';
-@import 'src/global-styles/colors/declarations';
-
-@import 'src/global-styles/typography/variables';
-
-.ui.menu {
-  border: 0;
-  box-shadow: none;
-}
-
-header {
+.page-header {
   width: 100%;
   height: 56px;
   font-weight: bold;
@@ -22,14 +12,14 @@ header {
   }
 
   .logo {
-    font-family: $font-family-sans;
+    font-family: 'BCG-Henderson-Sans';
     font-size: 2.8rem;
     width: 56px;
     height: 56px;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: $color-brand-dark-green;
+    background-color: $bcg-green--dark;
     color: $white;
     text-align: center;
 
