--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,31 +1,41 @@
 @import 'src/global-styles/colors';
 @import 'src/global-styles/responsive';
 
-.page-header {
+$header-height: (
+  md: 56px,
+  sm: 48px
+);
+
+header {
+  position: fixed;
+  top: 0;
   width: 100%;
-  height: 56px;
-  font-weight: bold;
-  text-align: center;
+  height: map-get($header-height, md);
 
   @media (max-width: map-get($grid-breakpoints, sm)) {
-    height: 48px;
+    height: map-get($header-height, sm);
+  }
+
+  .ui.menu {
+    height: 100%;
   }
 
   .logo {
-    font-family: 'BCG-Henderson-Sans';
-    font-size: 2.8rem;
-    width: 56px;
-    height: 56px;
+    height: 100%;
+    width: map-get($header-height, md);
+
     display: flex;
     justify-content: center;
     align-items: center;
+
     background-color: $bcg-green--dark;
+
     color: $white;
-    text-align: center;
+    font-family: 'BCG-Henderson-Sans', sans-serif;
+    font-size: 2.8rem;
 
     @media (max-width: map-get($grid-breakpoints, sm)) {
-      width: 48px;
-      height: 48px;
+      width: map-get($header-height, sm);
       font-size: 2.2rem;
     }
   }
