Use header and nav tags for accessibility. Change Header component to Nav component. Move header/main-specific styles into Page (read Layout) component. The Nav should work anywhere it is placed and thus should not contain positional information. All layout position information moved into Page component. Will be useful when the footer is added later

--- a/src/components/Page/Page.scss
+++ b/src/components/Page/Page.scss
@@ -1,4 +1,28 @@
+@import 'src/global-styles/responsive';
+
 .page {
   position: relative;
   height: 100%;
+
+  header {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1;
+
+    height: 56px;
+    @media (max-width: map-get($grid-breakpoints, sm)) {
+      height: 48px;
+    }
+  }
+
+  main {
+    height: 100%;
+    width: 100%;
+
+    padding-top: 56px;
+    @media (max-width: map-get($grid-breakpoints, sm)) {
+      padding-top: 48px;
+    }
+  }
 }
