--- a/src/components/Page/Page.scss
+++ b/src/components/Page/Page.scss
@@ -1,8 +1,11 @@
 @import 'src/global-styles/responsive';
+@import 'src/global-styles/colors';
 
 .page {
-  position: relative;
-  height: 100%;
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+  background: $gray--lightest;
 
   header {
     position: fixed;
@@ -17,12 +20,17 @@
   }
 
   main {
-    height: 100%;
+    flex: 1;
     width: 100%;
 
-    padding-top: 56px;
+    padding-bottom: 90px;
+    padding-top: calc(56px + 45px);
     @media (max-width: map-get($grid-breakpoints, sm)) {
-      padding-top: 48px;
+      padding-top: calc(48px + 45px);
     }
+  }
+
+  footer {
+    width: 100%;
   }
 }
