--- a/src/containers/Results/Results.scss
+++ b/src/containers/Results/Results.scss
@@ -1,14 +1,4 @@
 #results {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  min-height: 100vh;
+  // keep
 }
 
-#results main {
-  flex: 1 1 auto;
-}
-
-#results h2 {
-  margin-top: 30px;
-}
