--- a/src/components/Heading/Heading.scss
+++ b/src/components/Heading/Heading.scss
@@ -1,27 +1,17 @@
-//h1 {
+//@import 'src/global-styles/typography';
 //
+//h1 {
+//  @extend %heading-large-sans;
 //}
 //
 //h2 {
-//
+//  @extend %heading-regular-sans;
 //}
 //
 //h3 {
-//
+//  @extend %heading-small-sans;
 //}
-//
-//h4 {
-//
-//}
-//
-//h5 {
-//
-//}
-//
-//h6 {
-//
-//}
-//
+
 //p,
 //ol,
 //ul,
