--- a/src/global-styles/_colors.scss
+++ b/src/global-styles/_colors.scss
@@ -1,16 +1,16 @@
 // Primary brand colors
-$bcg-green--dark: #00532f;
-$bcg-green: #177b57;
-$bcg-green--blue-green: #3fad93;
-$bcg-green--light: #32c77f;
-$bcg-yellow: #e4ef39;
+$bcg-green--dark: #00532F;
+$bcg-green: #177B57;
+$bcg-green--blue-green: #3FAD93;
+$bcg-green--light: #32C77F;
+$bcg-yellow: #E4EF39;
 
 // Grayscale
 $black: #000000;
 $gray--darkest: #333333;
 $gray--darker: #707070;
-$gray--dark: #b7b7b7;
-$gray: #d9d9d9;
-$gray--light: #f2f2f2;
-$gray--lightest: #fafafa;
-$white: #ffffff;
+$gray--dark: #B7B7B7;
+$gray: #D9D9D9;
+$gray--light: #F2F2F2;
+$gray--lightest: #FAFAFA;
+$white: #FFFFFF;
