--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,39 @@
+@font-face {
+  font-family: 'HendersonBCGSans-Regular';
+  src: url('assets/fonts/HendersonBCGSans-Regular.woff') format('woff');
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: 'HendersonBCGSans-Light';
+  src: url('assets/fonts/HendersonBCGSans-Light.woff') format('woff');
+  font-weight: 300;
+}
+
+@font-face {
+  font-family: 'HendersonBCGSans-Thin';
+  src: url('assets/fonts/HendersonBCGSans-Thin.woff') format('woff');
+  font-weight: 100;
+}
+
+@font-face {
+  font-family: 'HendersonBCGSans-Bold';
+  src: url('assets/fonts/HendersonBCGSans-Bold.woff') format('woff');
+  font-weight: 700;
+}
+
+@font-face {
+  font-family: 'HendersonBCGSerif-Regular';
+  src: url('assets/fonts/HendersonBCGSerif-Regular.woff') format('woff');
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: 'HendersonBCGSerif-Bold';
+  src: url('assets/fonts/HendersonBCGSerif-Bold.woff') format('woff');
+  font-weight: 700;
+}
+
 html {
   font-size: 62.5%;
 }
