--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -1,3 +1,5 @@
+@import 'src/global-styles/colors';
+
 .ui.card {
   &.green,
   &.green:hover {
@@ -14,5 +16,9 @@
     display: inline-block;
     color: #3FAD93;
     float: right;
+  }
+
+  b {
+    color: $bcg-green;
   }
 }
