--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -1,24 +1,72 @@
 @import 'src/global-styles/colors';
 
+/* Overrides */
 .ui.card {
   &.green,
   &.green:hover {
-    border-top: 4px solid #3FAD93;
-    box-shadow: 0 1px 3px 0 #D4D4D5, 0 0 0 1px #D4D4D5;
+    border-top: 4px solid $bcg-green--blue-green;
+    box-shadow: 0 1px 3px 0 $gray, 0 0 0 1px $gray;
   }
 
+  .header {
+    margin: 15px 0 10px !important;
+
+    font-family: HendersonBCGSans-Bold !important;
+    font-size: 20px !important;
+    color: $gray--darkest !important;
+    letter-spacing: 0 !important;
+    line-height: 30px !important;
+  }
+
+  .meta {
+    font-family: HendersonBCGSans-Bold;
+    font-size: 12px;
+    color: $gray--dark;
+    letter-spacing: 1.5px;
+    line-height: 18px;
+  }
+
+  .description {
+    font-family: HendersonBCGSans-Regular;
+    font-size: 16px;
+    color: $gray--darker;
+    letter-spacing: 0;
+    line-height: 24px;
+  }
+}
+
+/* Non-overrides */
+
+.ui.card {
   .practiceAreas {
-    display: inline-block;
-    color: #A9A9A9;
+    display: inline-flex;
+    align-items: center;
+    flex-direction: row;
+
+    font-family: HendersonBCGSans-Regular;
+    font-size: 12px;
+    color: $gray--darker;
+    letter-spacing: 0;
+    line-height: 18px;
   }
 
   .matchPercentage {
     display: inline-block;
-    color: #3FAD93;
     float: right;
+
+    font-family: HendersonBCGSans-Bold;
+    font-size: 12px;
+    color: $bcg-green--blue-green;
+    letter-spacing: 1.5px;
+    line-height: 18px;
   }
 
   b {
     color: $bcg-green;
+  }
+
+  .bullet {
+    font-size: 6px;
+    margin: 0 10px;
   }
 }
