--- a/src/containers/Results/Results.scss
+++ b/src/containers/Results/Results.scss
@@ -1,4 +1,10 @@
 #results {
-  // keep
+  .resultCount {
+    font-family: HendersonBCGSans-Bold;
+    font-size: 20px;
+    color: #707070;
+    letter-spacing: 0;
+    line-height: 30px;
+  }
 }
 
