Moved search bar logic into separate component

--- a/src/containers/Results/Results.scss
+++ b/src/containers/Results/Results.scss
@@ -1,5 +1,7 @@
 #results {
   .resultCount {
+    margin-bottom: 40px;
+
     font-family: HendersonBCGSans-Bold;
     font-size: 20px;
     color: #707070;
