--- a/src/containers/Results/Results.scss
+++ b/src/containers/Results/Results.scss
@@ -1,6 +1,6 @@
 #results {
   .resultCount {
-    margin-bottom: 40px;
+    margin: 40px 0;
 
     font-family: HendersonBCGSans-Bold;
     font-size: 20px;
